Fix dietary tabs on smaller screens

--- a/src/scss/flavours.scss
+++ b/src/scss/flavours.scss
@@ -46,7 +46,9 @@
 
                 button {
                     border: none;
-                    padding: 0.6em 2em;
+                    padding: 0.6em 1em;
+                    width: 9em;
+                    max-width: 25%;
                     margin: 0;
                     transform: translateY(1px);
                     z-index: 1;
